--- a/Proposal.tex
+++ b/Proposal.tex
@@ -101,9 +101,9 @@ The ongoing cost reduction of various omics-approaches coupled to high throughpu
 The current methods for integrating and analysing multiple layers or dimensions have two major limitations in their design: scalability and generality (i.e. the possibility to easily add more levels or dimensions). Moreover, the sheer amount of data points hampers data exploration without the need for filtering, dividing or restructuring the data. Integration of complex datasets is needed to better understand the complex biology of cancer\cite{Munoz2011}, but is greatly restricted by these limitations.
 \medskip
 
-\noindent Enter the Semantic Web and its Resource Description Framework (RDF). A simple and flexible framework for describing anything about anything.
+\noindent Enter the Semantic Web and the Resource Description Framework (RDF). A simple and flexible framework for describing anything about anything.
 % An example of such a RDF-instance (a triple) is "BRAF1 has the molecular function of binding calcium ion", which has these three parts: a subject (BRAF1), a predicate (molecular function) and an object (binding calcium ion). Another triple can then say something about the phosphorylated protein levels of this gene in a sample. Connecting these two triples would enable a researcher to find a possible pattern in the data (i.e. a gene, responsible for calcium ion binding, has a low phosphorylation level in the investigated sample). 
-Since every type of data can be translated to this universal language, integration of large datasets of different levels and dimensions becomes possible and more feasable. When researchers  convert their local data to RDF, they can easily connect and combine it with public repositories,  making analyses more powerful. By using the SPARQL Protocol and RDF Query Language (SPARQL), retrieving and manipulating data in RDF is easily readable by both humans and computers. Researchers can subsequently visualise the SPARQL-results as a whole or filter them further.
+Every type of data can be translated to this universal language, integration of large datasets of different levels and dimensions becomes possible and more feasible. When researchers convert their data to RDF, they can easily connect and combine these with public repositories, making analyses more powerful. By using the SPARQL Protocol and RDF Query Language (SPARQL), retrieving and manipulating data in RDF becomes readable by both humans and computers. Researchers can start to form hypothesis by using simple queries and subsequently visualise the SPARQL-results using advanced visualisation frameworks. 
 \medskip
 
 \noindent Here, we propose the use of semantic web technologies and visual analytics to decrease the complexity of integrating and visualizing multi-level and -dimensional biological data. These methods will enable further elucidation of the complex biology of, for example, cancer. Firstly, we will create the framework needed to design the missing tools for converting the most-used omics formats to RDF. Next, visualisations (based on visual analytics) of the biological RDF-data will be created, which will be used to perform previously impossible integration-focussed analyses on the consequences of structural variation in the non-coding regions of cancer-genomes.
