--- a/Proposal_V2.tex
+++ b/Proposal_V2.tex
@@ -41,7 +41,7 @@
 \titleformat{\subsubsection}[block]{\bfseries\textit}{\thesubsubsection}{0.1mm}{} % Change the look of the section titles
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{caption}
-
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
 \usepackage{fancyhdr} % Headers and footers
 \pagestyle{fancy} % All pages have headers and footers
@@ -154,16 +154,17 @@ The implementation of web-based visual analytics for RDF-databases is another le
     \label{fig:ae}
 \end{figure}
 \section*{Preliminary studies}
+During my Masters studies, I have already implemented graph-based methods for different purposes. As an illustration of the strengths of multilayer network-analysis, I describe a small example from the work I have done as an intern an the Sanger Institute\footnote{Unpublished data, discretion appreciated.}. Furthermore, we show trough a pilot-study the added efficiency of our proposed methods.
 \subsection*{Cis-regulatory regions: potential}
-An illustration of the strengths of RDF-based multilayer network-analysis is the work I have done in the Sanger Institute\footnote{Unpublished data, discretion appreciated.}. When analysing predicted altered and/or de novo transcription factor binding sites (TFBS) by single-nucleotide polymorphisms (SNPs) in non-coding regions of over 1300 melanoma-patients, no overrepresented TFBS were found. However, when linked to a triple-store of TF-families and a triple-store of TcoF -containing TF-interacting proteins and co-factors- we found that there was a clear overrepresentation of TFs, binding to the transcription co-activator NCOA6. Further analyses showed more evidence of the importance of this protein and similar vitamin D receptor binding-proteins in familial melanoma\ref{fig:mela} (e.g. co-segregation in melanoma-prone families). Without the multilayer network-analysis, such results are often not found and without RDF, different databases and -sources would be much harder to integrate for (exploratory) analyses. 
+When analysing predicted altered and/or de novo transcription factor binding sites (TFBS) by single-nucleotide polymorphisms (SNPs) in non-coding regions of over 1300 melanoma-patients, no overrepresented TFBS were found. We then discided to use graph-based data integration methods by linking the SNPs to regions in the TF-ChIP data of ENCODE\cite{ENCODE}. Furthermore, two triple stores were added: TcoF -containing TF-interacting proteins and co-factors- and gene ontology terms form the GO consortium. We found that there was a clear overrepresentation of TFs binding to transcription co-activators, like NCOA6, which have a functional role in \emph{\lstinline|vitamin D receptor binding|}. Further analyses showed more evidence of the importance of these findings in familial melanoma (e.g. co-segregation in melanoma-prone families). Without the multilayer network-analysis, in this case of genomics and epigenomics data, such new testable hypotheses are often not found. And without RDF, different databases and -sources would be much harder to integrate for (exploratory) analyses. 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.75\textwidth]{rondjeGraphs.pdf}
-    \caption{\textbf{Graph of GO:0042809.} From a large dataset of mutations in melanoma-patients to a new -testable- hypothesis, alteration in vitamin D receptor binding, via a TFBS-regions and a TF-protein interaction database.}
+    \caption{\textbf{Graph of GO:0042809.} From a large dataset of mutations in melanoma-patients (outside ring) to a new -testable- hypothesis, alteration in vitamin D receptor binding (inside ring), via a TFBS-regions and a TF-protein interaction database.}
     \label{fig:mela}
 \end{figure}
 \subsection*{Ribosomal profiling and gene ontology: logistic efficiency}
-To asses to feasibility of this proposal, a small-scale pilot-study was performed on de data of \citet{VanHeesch2014}. This dataset includes transcriptome data of mRNA's, bound to a number of ribosomal units (1 to 7+) and matching exome-data. If one would be interested in the molecular functions of a gene with an allelic bias, a disproportional amount of time is lost on parsing, intersecting and downloading various types of data (fig. \ref{fig:awesome_image}). With the current methods, twelve set-operations (e.g. intersections, unions) have to be performed on $\pm$5gb of data. Furthermore, three datasets ($\pm$15gb) have to be completely downloaded once -until a new version is launched- before a simple exploratory question can be answered. Approximately three and a half hours was needed to perform this, in contrast to one hour with the proposed methods. Of this hour, more than fifty minutes were used to convert VCF to RDF and load the 4store database: every query hereafter takes up approximately 10 minutes. First and foremost, this pilot illustrates the low-complex nature of the proposed methods. Secondly, it shows the valuable property of having a separate query-stage, which results in being able to make more than ($\frac{(8*60)-50}{10}= $) forty queries in eight hours, instead of approximately ($\frac{8-3,5}{3,5}= $) two queries with the currently used methods.
+To asses to feasibility of this proposal, a small-scale pilot-study was performed on the data of \citet{VanHeesch2014}. This dataset includes transcriptome data of mRNA's, bound to a number of ribosomal units (1 to 7+) and matching exome-data. If one would be interested in the molecular functions of a gene with an allelic bias, a disproportional amount of time is lost on parsing, intersecting and downloading various types of data (fig. \ref{fig:awesome_image}). With the conventional methods, twelve set-operations (e.g. intersections, unions) have to be performed on $\pm$5gb of data. Furthermore, three datasets ($\pm$15gb) have to be completely downloaded once -until a new version is launched- before a simple exploratory question can be answered. Approximately three and a half hours was needed to perform this, in contrast to one hour with the proposed methods. Of this hour, more than fifty minutes were used to convert data to a triple-store: every query hereafter takes up approximately 10 minutes. First and foremost, this pilot illustrates the low-complex nature of the proposed methods. Secondly, it shows the valuable property of having a separate query-stage, which results in being able to make more than ($\frac{(8*60)-50}{10}= $) forty queries in eight hours, instead of approximately ($\frac{8-3,5}{3,5}= $) two queries with the currently used methods.
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.75\textwidth]{DifferencesInDoingThings}
