misc.: commit for Adams

--- a/Proposal_V2.tex
+++ b/Proposal_V2.tex
@@ -177,14 +177,14 @@ A small-scale pilot-study was performed on the data of \citet{VanHeesch2014}. Th
 \end{figure}
 
 \section*{Scope \& aims}
-The aim of this project is to create new biological insights in the inter-level (e.g. transcriptome, proteome) consequences of structural variations in the non-coding regions of the genome. For this, a large number of datasets and -sources have to be integrated and analysed. Big data graph-based methods, like RDF,  allow us to do this.
+The aim of this project is to create new biological insights in effects of structural variations in the non-coding regions of the genome. For this, a large number of datasets and -sources have to be integrated and analysed. Big data graph-based methods, like RDF,  allow us to do this.
 Thus, this proposal has two sub-projects, which rely heavily on each other:
 
 \begin{enumerate}
 \item \textbf{Graph-based data integration \& visualisation} 
-Generation of novel methodologies for integration and analysis of large scale, multi-dimensional biological data
+Generation and adaptation of novel methodologies for integration and analysis of large scale, multi-dimensional biological data. And, more specifically, for structural variants in non-coding regions.
 \item \textbf{Multi-level analysis} 
-Multi-level and -dimensional integrative analysis to elucidate the consequences of genomic structural variations in non-coding regions, found in patients with congenital disease and cancer. 
+Multi-level and -dimensional integrative analysis to elucidate the consequences of genomic structural variations in non-coding regions, which are found in patients with congenital disease and cancer. 
 \end{enumerate}
 \section*{Relevance}
 The 2014 survey of \citet{Gomez-Cabrero2014} showed that biomedical academics had the highest interest (78.2 percent) in the integration of multiple omics-datasets and that there was a high need for standardized tools and data-types. Data-storage, -exploration and -exploitation were found the be key. Their conclusions were best summarized by \textit{the need for having exploration tools, which combine summary statistics and interactive visualisations, to analyse heterogeneous data-sets}.
