--- a/Proposal_V2.tex
+++ b/Proposal_V2.tex
@@ -61,7 +61,7 @@
 
 \author{
 \large
-\textsc {RHWE (Robin) van der Weide}\thanks{Promotor: Edwin Cuppen, Prof. PhD | Copromotor: Joep de Ligt, PhD}\\[2mm] 
+\textsc {RHWE (Robin) van der Weide}\thanks{Promotor: Prof. Edwin Cuppen, PhD | Copromotor: Joep de Ligt, PhD}\\[2mm] 
 \normalsize  BSc. Biology\\
 \normalsize  MSc. Cancer Stem cells \& Developmental biology (honours program)\\
 \normalsize  Utrecht Graduate School of Life Sciences \\
@@ -85,7 +85,7 @@ Summary of the research
 
 \begin{abstract}
 \noindent
-To date, structural variation in the non-coding regions of the genome is one of the least studied genomic events. Systematic linear approaches for elucidating the functional effects are rarely successful, which is mainly due to the functional complexity of non-coding regions (e.g. \textit{cis}- and \textit{trans}-acting elements, co-activation, non-coding RNA interaction). These analyses are further complicated by the diversity in types and consequences of these genomic alterations. Integration and visualisation of complex, multi-layered datasets are needed to better understand the functional effects of these events\cite{Munoz2011}.
+Effects of structural variation in the non-coding regions of the human genome are rarely studied which is strong contrast to their known role in disease [ref: Phenotypic impact of genomic structural variation: insights from and for human disease]. Systematic approaches for elucidating their functional effects are rarely successful, mainly due to the complexity of non-coding regions (e.g. \textit{cis}- and \textit{trans}-acting elements, co-activation, non-coding RNA interaction). Predictions on functionality are further complicated by the diversity in types and consequences of structural variants. Integration and visualisation of complex, multi-layered datasets are needed to better understand the functional effects of these events\cite{Munoz2011}.
 \medskip
 
 \noindent 
